better Marcheur leads to cleaner tests

--- a/test/fixtures/issue-158.html
+++ b/test/fixtures/issue-158.html
@@ -1,7 +1,7 @@
 <math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
 
     <mi>U</mi><mo>=</mo>
-    <mfenced open="{" close="" separators="|"><mrow>
+    <mfenced open="{" separators="|"><mrow>
         <mtable><mtr><mtd><mrow><maligngroup></maligngroup><msub><mrow>
                 <mi>Q</mi>
               </mrow><mrow>
